# FsPluginsOFX

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  Makefile  PORTING_STATUS.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md
.github/: RELEASE_v0.1.0.md
assets/: FsPluginsOFX.icns
src/: SelectiveColorBlurCore.cpp  SelectiveColorBlurCore.h  SelectiveColorBlurPlugin.cpp  ThinPattern.inc
tests/: core_test.cpp
tools/: generate_icons.py
